# go2_gps_nav

./: README.md  config.py  dwa_planner.py  map_handler.py  node.py  package.xml  path_planner.py  setup.cfg  setup.py
config/: navigation_params.yaml
go2_gps_nav/: __init__.py  goal_publisher.py  gps_navigation.py  gps_navigation_node.py
launch/: gps_navigation.launch.py
