<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_gps_nav</name>
  <version>0.1.0</version>
  <description>Minimal GPS navigation for ROS2</description>
  <maintainer email="daeun7250@gmail.com">Daeun Song</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pyproj</depend>
  <depend>numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>